--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "fit-friends",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {
-  },
+  "scripts": {},
   "private": true,
-  "dependencies": {
-  },
   "devDependencies": {
-    "nx": "15.6.3",
+    "@nrwl/nest": "^15.8.5",
+    "@nrwl/react": "^15.8.5",
     "@nrwl/workspace": "15.6.3",
-    "typescript": "~4.8.2",
-    "prettier": "^2.6.2"
+    "nx": "15.6.3",
+    "prettier": "^2.6.2",
+    "typescript": "~4.8.2"
   }
 }
