--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.0.0",
-    "mongoose": "^7.0.0",
+    "mongoose": "6.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.8.1",
