--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^6.1.2",
     "@testing-library/react": "14.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
@@ -56,6 +57,7 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.0.0",
+    "bcrypt": "^5.1.0",
     "mongoose": "6.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
