--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.0.0",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
     "mongoose": "6.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
