--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "axios": "^1.0.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "mongoose": "6.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
