--- a/libs/environments/.users.env
+++ b/libs/environments/.users.env
@@ -4,3 +4,8 @@ MONGO_PORT=27017
 MONGO_USER=admin
 MONGO_PASSWORD=123456
 MONGO_AUTH_BASE=admin
+
+JWT_AT_SECRET='at-secret'
+JWT_AT_EXPIRES_IN='15m'
+JWT_RT_SECRET='rt-secret'
+JWT_RT_EXPIRES_IN='7d'
