--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/react": "14.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.4.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.14.2",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.8",
