--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^6.2.1",
     "axios": "^1.0.0",
     "bcrypt": "^5.1.0",
