--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jest-environment-node": "^29.4.1",
     "nx": "15.6.3",
     "prettier": "^2.6.2",
+    "prisma": "^4.11.0",
     "react-refresh": "^0.10.0",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.0.5",
