--- a/apps/workouts/project.json
+++ b/apps/workouts/project.json
@@ -50,6 +50,34 @@
         "jestConfig": "apps/workouts/jest.config.ts",
         "passWithNoTests": true
       },
+      "db-validate": {
+        "executor": "nx:run-commands",
+        "options": {
+          "command": "npx prisma validate --schema ./prisma/schema.prisma",
+          "cwd": "apps/workouts"
+        }
+      },
+      "db-migrate": {
+        "executor": "nx:run-commands",
+        "options": {
+          "command": "npx prisma migrate dev --schema ./prisma/schema.prisma --name initial --skip-generate --skip-seed",
+          "cwd": "apps/workouts"
+        }
+      },
+      "db-reset": {
+        "executor": "nx:run-commands",
+        "options": {
+          "command": "npx prisma migrate reset --schema ./prisma/schema.prisma --force --skip-generate --skip-seed",
+          "cwd": "apps/workouts"
+        }
+      },
+      "db-generate": {
+        "executor": "nx:run-commands",
+        "options": {
+          "command": "npx prisma generate --schema ./prisma/schema.prisma",
+          "cwd": "apps/workouts"
+        }
+      },
       "configurations": {
         "ci": {
           "ci": true,
