--- a/apps/nutrition/package.json
+++ b/apps/nutrition/package.json
@@ -1,5 +1,6 @@
 {
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
-  }
+  },
+  "name": "@fit-friends/nutrition"
 }
