--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
@@ -67,6 +68,7 @@
     "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^6.2.1",
     "@prisma/client": "^4.11.0",
+    "@types/nodemailer": "^6.4.7",
     "amqp-connection-manager": "^4.1.11",
     "amqplib": "^0.10.3",
     "axios": "^1.0.0",
@@ -74,7 +76,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.7",
+    "handlebars": "^4.7.7",
     "mongoose": "6.7.2",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
