--- a/apps/alert/project.json
+++ b/apps/alert/project.json
@@ -56,6 +56,39 @@
           "codeCoverage": true
         }
       }
+    },
+    "build-seed": {
+      "executor": "@nrwl/webpack:webpack",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "target": "node",
+        "compiler": "tsc",
+        "outputPath": "dist/apps/alert",
+        "main": "apps/alert/src/seeds.ts",
+        "tsConfig": "apps/alert/tsconfig.app.json",
+        "isolatedConfig": true,
+        "webpackConfig": "apps/alert/webpack.config.js"
+      },
+      "configurations": {
+        "production": {
+          "optimization": true,
+          "extractLicenses": true,
+          "inspect": false
+        }
+      }
+    },
+    "seed": {
+      "executor": "@nrwl/js:node",
+      "options": {
+        "buildTarget": "alert:build-seed",
+        "watch": false,
+        "inspect": false
+      },
+      "configurations": {
+        "production": {
+          "buildTarget": "alert:build-seed:production"
+        }
+      }
     }
   },
   "tags": []
