--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prisma": "^4.11.0",
     "react-refresh": "^0.10.0",
     "react-test-renderer": "18.2.0",
+    "run": "^1.4.0",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.9.5",
