--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "passport-local": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-router-dom": "6.8.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
