--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "handlebars": "^4.7.7",
     "mongoose": "6.7.2",
