--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-router-dom": "6.8.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "yup": "^1.1.1"
   }
 }
