--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
