--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@fit-friends/constants": ["libs/constants/src/index.ts"],
       "@fit-friends/core": ["libs/core/src/index.ts"],
       "@fit-friends/shared-types": ["libs/shared-types/src/index.ts"]
     }
