build: ➕ Add  @reduxjs/toolkit react-redux redux npm dependencies

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^6.2.1",
     "@prisma/client": "^4.11.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/nodemailer": "^6.4.7",
     "amqp-connection-manager": "^4.1.11",
     "amqplib": "^0.10.3",
@@ -88,7 +89,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-redux": "^8.0.5",
     "react-router-dom": "6.8.1",
+    "redux": "^4.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0",
