--- a/package.json
+++ b/package.json
@@ -74,13 +74,14 @@
     "@types/nodemailer": "^6.4.7",
     "amqp-connection-manager": "^4.1.11",
     "amqplib": "^0.10.3",
-    "axios": "^1.0.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "handlebars": "^4.7.7",
+    "http-status-codes": "^2.2.0",
     "mongoose": "6.7.2",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
