--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "dayjs": "^1.11.7",
     "handlebars": "^4.7.7",
     "http-status-codes": "^2.2.0",
+    "jwt-decode": "^3.1.2",
     "mongoose": "6.7.2",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
@@ -92,6 +93,7 @@
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "6.8.1",
+    "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
