--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "redux": "^4.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
+    "swiper": "^9.3.2",
     "tslib": "^2.3.0",
     "yup": "^1.1.1"
   }
