--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-router-dom": "5.3.3",
+    "@types/react-slider": "^1.3.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "^29.4.1",
@@ -93,6 +94,7 @@
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "6.8.1",
+    "react-slider": "^2.0.4",
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "reflect-metadata": "^0.1.13",
